[project]
name = "messages-search-api"
version = "0.1.0"
description = "Search API for messages data"
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.128.5",
  "uvicorn[standard]>=0.40.0",
  "httpx>=0.28.1",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.12.0",
  "cachetools>=7.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.4",
  "pytest-asyncio>=0.24.0",
]

[tool.uv]
package = false
